--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -1,3 +1,13 @@
+nav#navbar ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+nav#navbar ul li {
+	margin: 5px 0;
+}
+
 nav#navbar ul li a {
 	display: block;
 	background-color: green;
