--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -24,3 +24,17 @@ nav#navbar ul li a:hover {
 	background-color: #ccc;
 	color: #000;
 }
+
+.relexample {
+	position: relative;
+	left: 20px;
+	bottom: 10px;
+}
+
+.firstchar {
+	color: gray;
+	font-weight: bold;
+	font-size: 1.5em;
+	position: relative;
+	top: 4px;
+}
