switched up nav w/ css
placed navigation into fixed position with css

--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -38,3 +38,11 @@ nav#navbar ul li a:hover {
 	position: relative;
 	top: 4px;
 }
+
+#fixedbox {
+	width: 100px;
+	height: 145px;
+	position: fixed;
+	bottom: 20px;
+	right: 40px;
+}
