--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -56,6 +56,7 @@ nav#navbar ul li a:hover {
 #text {
   font-weight: bold;
   font-size: 2em;
+  font-style: italic;
   text-decoration: underline;
 }
 
@@ -65,4 +66,13 @@ nav#navbar ul li a:hover {
 
 .colortwo {
   color: red;
+}
+
+#font {
+  font-style: italic;
+  font-weight: bold;
+}
+
+.fontone {
+  font-weight: bold;
 }
