removed html styling
removed all <strong> and <em> tags and changed into css

--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -35,9 +35,19 @@ nav#navbar ul li a:hover {
 
 .text {
   text-decoration: underline;
+  font-weight: bold;
+}
+
+.textone {
+  font-weight: bold;
+  font-style: italic;
 }
 
 #font {
   font-style: italic;
+  font-weight: bold;
+}
+
+.fontone {
   font-weight: bold;
 }
